fix(look&feel,apollo): ensure overflow is hidden in progress bar styles (#1509)
* fix(look&feel,apollo): ensure overflow is hidden in progress bar styles

* fix(apollo,look&feel): import Stepper from apollo/lf in the story

* feat(look&feel,apollo): set to ProgressBar a progress value border radius

--- a/client/apollo/css/src/ProgressBar/ProgressBarCommon.css
+++ b/client/apollo/css/src/ProgressBar/ProgressBarCommon.css
@@ -4,6 +4,7 @@
   height: calc(6 / var(--font-size-base) * 1rem);
   border: none;
   border-radius: var(--progress-bar-radius);
+  overflow: hidden;
   background-color: var(--progress-bar-background-color);
   appearance: var(--progress-bar-appearance);
 
@@ -14,12 +15,14 @@
 
   /* For WebKit browsers */
   &::-webkit-progress-value {
+    border-radius: var(--progress-bar-radius);
     background-color: var(--progress-bar-appearance);
     transition: width 0.75s ease;
   }
 
   /* For Firefox */
   &::-moz-progress-bar {
+    border-radius: var(--progress-bar-radius);
     background-color: var(--progress-bar-appearance);
 
     /* transition doesn't work in Firefox for native progress bars */
